# lifecycle

./: .gitignore  BUILD.bazel  LICENSE  README.md  WORKSPACE  doc.go  error.go  go.mod  go.sum  hook.go  log.go  repositories.bzl  service.go  state.go  util.go  worker.go  worker_test.go
.github/workflows/: ci.yml
examples/http/: BUILD.bazel  http.go
