load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/tickamp/vanity-go
gazelle(name = "gazelle")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "error.go",
        "hook.go",
        "log.go",
        "service.go",
        "state.go",
        "util.go",
        "worker.go",
    ],
    importpath = "go.tickamp.dev/lifecycle",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["worker_test.go"],
    embed = [":go_default_library"],
    deps = ["@com_github_stretchr_testify//assert:go_default_library"],
)
